--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -259,19 +259,17 @@ Error message and password prompt
 
 <li>8 formes d'intelligence</li>
 
-<li>Aberkane vs zététique</li>
-
 <li>ABOUT DEPRESSIVE PEOPLE</li>
 
 <li>Abréaction</li>
+
+<li>achats amazon / leclerc / leboncoin</li>
 
 <li>Alain Damasio @ Thinkerview</li>
 
 <li>aliens, ovnis</li>
 
 <li>Allocution du pape François à propos de l'écologie &amp; covid</li>
-
-<li>amazon / leclerc</li>
 
 <li>Apprendre à identifier les sensations corporelles des émotions (pour mieux les gérer)</li>
 
@@ -453,6 +451,8 @@ Error message and password prompt
 
 <li>jeux à faire/refaire</li>
 
+<li>jeux pratiqués</li>
+
 <li>Kotlin</li>
 
 <li>Krishnamurti - LA MÉDITATION EST LA DESTRUCTION, L'ESPACE INTEMPOREL</li>
@@ -542,6 +542,8 @@ Error message and password prompt
 <li>PigCake recommandations</li>
 
 <li>pointeur current TODO</li>
+
+<li>prénoms</li>
 
 <li>Projection de la voix</li>
 
@@ -9644,7 +9646,7 @@ Home
     }
 }</pre>
 </div>
-<div created="20220124175913842" list="cadeaux pw [[Perçou kid talk Perceval]] [[daily routine à inclure]] [[vater td]] wishlist [[Flashcards à faire]] DecomissionPcTt [[dev responsable &amp; job hunt]] everywhere-bundle" modified="20220503135822671" tags="" title="$:/plugins/ajh/favorites/list">
+<div created="20220124175913842" list="cadeaux pw [[Perçou kid talk Perceval]] [[daily routine à inclure]] [[vater td]] wishlist [[Flashcards à faire]] DecomissionPcTt [[dev responsable &amp; job hunt]] everywhere-bundle [[achats amazon / leclerc / leboncoin]]" modified="20220511172759150" tags="" title="$:/plugins/ajh/favorites/list">
 <pre></pre>
 </div>
 <div caption="{{ $:/core/images/star-filled}} {{$:/language/Buttons/Favorites/Caption}}" created="20220124175934967" description="{{$:/language/Buttons/Favorites/Hint}}" modified="20220124175934967" tags="$:/tags/ViewToolbar" title="$:/plugins/ajh/favorites/template">
@@ -10070,13 +10072,13 @@ Home
 <div created="20190108104722609" modified="20220310143750319" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20190108101211875" modified="20220503120927857" title="$:/state/tab/sidebar--595412856">
-<pre>$:/plugins/ajh/favorites/SideBar</pre>
+<div created="20190108101211875" modified="20220523124140713" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20220511151738458" list="[[Quotes, citations]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" modified="20220511151738458" title="$:/StoryList">
+<div created="20220523124604960" list="[[jeux pratiqués]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" modified="20220523124729308" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10130,11 +10132,11 @@ Home
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1536&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;864&quot;
+            &quot;text&quot;: &quot;1080&quot;
         }
     }
 }</pre>
@@ -10145,7 +10147,7 @@ Home
 <div created="20210313142548541" modified="20210715143200077" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20220511151736876" title="$:/temp/search">
+<div created="20190114084246125" modified="20220523094307096" title="$:/temp/search">
 <pre>quotes</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
@@ -10309,17 +10311,6 @@ Home
 * musicale
 * spirituelle</pre>
 </div>
-<div created="20220203092542246" modified="20220203094435224" tags="Journal" title="Aberkane vs zététique">
-<pre>* https://medium.com/@brunocampellodesouza/there-are-so-many-things-i-see-wrong-with-this-piece-that-it-is-hard-to-even-organize-the-db3a3c20b188
-* https://www.jsmp.dk/posts/2019-06-16-talebiq/
-* https://medium.com/@JeanRene_K/le-cv-didriss-aberkane-y-a-t-il-tromperie-sur-la-marchandise-bae137e0d2f7
-* https://menace-theoriste.fr/idriss-aberkane-icone-fausse-ere/
-
-
-* https://twitter.com/franckramus/status/1255390464641032193
-* https://twitter.com/franckramus/status/1173943736163799040?lang=fr
-* https://twitter.com/nntaleb/status/1200434841050865664</pre>
-</div>
 <div created="20201202164835902" modified="20201202164912195" tags="education communication" title="ABOUT DEPRESSIVE PEOPLE">
 <pre>https://ideas.ted.com/the-holidays-arent-happy-for-everyone-heres-how-you-can-connect-to-friends-who-are-depressed/
 
@@ -10348,6 +10339,24 @@ Dans les années 1893-1895, Freud et Breuer travaillent sur l'hystérie et sur s
 ! L'abréaction par le langage
 
 L'autre voie est celle de l'expression et de la représentation du souvenir pathogène par le langage. Freud a toujours soutenu que l'homme trouve un substitut à l'acte dans le langage. Le souvenir toxique peut être intégré et décrit par le sujet dans une série associative qui permettra la remise en place de l'événement traumatique au sein du système symbolique du langage, ce qui confère au sujet la capacité de regarder &quot;en face&quot; son trauma en le verbalisant et en le comprenant. Parler de son traumatisme, le cerner avec toujours plus de précision, c'est l'amener à la représentation, c'est alléger le souvenir de sa charge émotionnelle négative. Lorsqu'il travaillait à l'aide de l'hypnose, Freud pensait que l'abréaction se produisait par &quot;usure&quot; de l'affect au cours des associations libres de l'individu. Cependant, l'hypnose produisant des associations par suggestion, Freud a renoncé à son emploi au profit de la cure analytique, qui mobilise le sujet et favorise l'expression d'associations &quot;libres&quot; mettant en évidence les mécanismes de défense et de refoulement. Freud comprit progressivement que l'événement traumatique l'était, non seulement du point de vue du corps victime d'une réalité toxique, mais toujours en même temps du point de vue du système de représentation imaginaire/symbolique du sujet. Je suis traumatisé dans mon corps induit immanquablement que je suis traumatisé dans ma vision du monde ; mon imaginaire et mon découpage du monde en sont inévitablement marqués et ébranlés. Aussi ne s'agira-t-il plus, pour Freud, de tenter d'expulser l'affect par une abréaction physiologique &quot;ex corpus, ex machina&quot;, ou par les vertus artificielles de l'hypnose, en se plaçant dans les deux cas dans une vision &quot;énergétique&quot; du trauma, mais de provoquer l'abréaction par la prise de conscience du sujet, son expression et sa représentation, ce qui favorise la remise en place et la réappropriation d'un univers imaginaire/ symbolique par l'individu. Où l'on comprend que l'individu traumatisé lutte non seulement contre son affect, mais aussi contre tous les refoulements, les jugements moraux et les représentations s'y rapportant. L'abréaction adaptée est donc celle qui permet à l'individu de reprendre pleinement sa place au sein d'une représentation imaginaire/symbolique intégrée et assumée. </pre>
+</div>
+<div created="20220511075554161" modified="20220516083854068" tags="" title="achats amazon / leclerc / leboncoin">
+<pre>* sirop indus
+* post-its
+* multiprise cuisine
+* adapter VGA/?
+** https://www.amazon.fr/Syncwire-Adaptateur-HDMI-vers-VGA/dp/B07B2T5DV9/ref=sr_1_11
+** https://www.amazon.fr/Adaptateur-ordinateur-projecteur-Chromebook-Raspberry/dp/B09HQZD1D8/ref=sr_1_33
+* cache-prises bébé
+* cloche à micro-ondes
+* clés à molette
+* perceuse
+* four
+* grille-pain
+* micro-ondes
+* lit superposé
+* clic-clac / BZ
+</pre>
 </div>
 <div created="20190418151400697" modified="20201201131556282" tags="societe fiche_lecture" title="Alain Damasio @ Thinkerview">
 <pre>! Michel Foucault, les 3 grands régimes de pouvoir :	
@@ -10405,13 +10414,6 @@ Je suis sûr que les membres de chacune de vos communautés ne se contenteront p
 Et maintenant, je voudrais demander à Dieu de bénir chacun de vous, de bénir le cœur de chacun de vous, que vous soyez croyant ou non, de quelque tradition religieuse que ce soit. Que Dieu vous bénisse tous. Amen.
 
 (c) Traduction de Zenit, Anita Bourdin</pre>
-</div>
-<div created="20220511075554161" modified="20220511081216598" tags="" title="amazon / leclerc">
-<pre>* multiprise cuisine
-* adapter VGA/?
-** https://www.amazon.fr/Syncwire-Adaptateur-HDMI-vers-VGA/dp/B07B2T5DV9/ref=sr_1_11
-** https://www.amazon.fr/Adaptateur-ordinateur-projecteur-Chromebook-Raspberry/dp/B09HQZD1D8/ref=sr_1_33
-* </pre>
 </div>
 <div created="20201202153141717" modified="20201202153351094" tags="spiritualité communication perso+" title="Apprendre à identifier les sensations corporelles des émotions (pour mieux les gérer)">
 <pre>https://matransformationintérieure.fr/apprendre-a-identifier-sensations-corporelles-emotions-mieux-gerer/
@@ -10961,11 +10963,14 @@ He was the embodied example of living fully.  He said, “I am means.  There are
 * compassion
 * live in present : je n'ai pas besoin de FAIRE pour ETRE, mais quand je SUIS je FAIS</pre>
 </div>
-<div created="20220428145354217" modified="20220503135841268" tags="" title="cadeaux">
+<div created="20220428145354217" modified="20220516083944924" tags="" title="cadeaux">
 <pre>! Julia
 * machine à gauffre + croques monsieurs
 * cloche à micro-ondes
 * multiprise plan de cuisine
+* perceuse
+* pic à chignon
+* foulard
 
 ! Perceval
 * skateboard</pre>
@@ -12879,7 +12884,7 @@ http://www.celestialheavens.com/viewpage.php?id=24
 * Individual Computer Players won't hire heroes is they already have six or more.
 * Computer Players as a whole will not hire Heroes if they have 20 or more among them. </pre>
 </div>
-<div created="20190108105358377" modified="20220503132353345" tags="core" title="Home">
+<div created="20190108105358377" modified="20220523104459763" tags="core" title="Home">
 <pre>* [[pw]]
 * ''dez Tugan 7 mai 2020'' https://mail.yahoo.com/d/search/keyword=Tugan/messages/17172
 * ''DIF'' / CPF / 
@@ -12894,6 +12899,8 @@ http://www.celestialheavens.com/viewpage.php?id=24
 * https://facebook.com/messages l.d@y7+17
 * https://monespace.ausy.fr sa.le@au.f322 (mois doublé)
 * https://www.facebook.com/troisieme.type
+* ''https://www.amazon.fr/s?k=lego&amp;i=warehouse-deals''
+* https://www.lego.com/fr-fr/categories/sales-and-deals
 * presti daortiz ideas ''https://www.facebook.com/hashtag/ideanotebook?__gid__=283203773743670''
 * presti blog: the mind oracle	https://themindoracle.blogspot.com/
 * presti blog: the jerx https://www.thejerx.com/
@@ -13642,7 +13649,7 @@ En outre, cela responsabilise également chacun et l'ancre dans une forme de ré
 
 La pensée gnostique a réussie, comme souvent, à nous faire penser l'inverse même des conséquences logiques des éléments en présence...Alors qu'il ne s'agit en fait que surfer sur nos pulsions grégaires...</pre>
 </div>
-<div created="20190830154756419" modified="20200210103918755" tags="hypnomachie pedo fiche_lecture" title="Hypnomachie &amp; pedo">
+<div created="20190830154756419" modified="20220523124655538" tags="hypnomachie fiche_lecture pk" title="Hypnomachie &amp; pedo">
 <pre>&lt;&lt;&lt;
 Je ne suis pas sûr que ce soit à quiconque d'autre que nous memes de nous protéger.
 Que des commerciaux mettent des femmes nues pour vendre des yoghourts, c'est leur droit le plus strict.
@@ -13804,14 +13811,24 @@ Heureusement, tout cela n’est pas inéluctable. Comme cette guerre se dérou
 # https://www.lesmots-leschoses.fr/livre/9791026708933-la-crise-de-la-realite-formes-et- mecanismes-d-une-destitution-christian-godin/
 # https://www.rtbf.be/info/belgique/detail_coronavirus-en-belgique-fermer-les-commerces-pour-obtenir-un-effet-choc?id=106427333</pre>
 </div>
-<div created="20190524134214903" modified="20200130150945005" tags="todo magic" title="ideas">
+<div created="20190524134214903" modified="20220519084601267" tags="todo magic" title="ideas">
 <pre>! Magic : routine tips
 * jeu du rond
 * false transfert / french drop + &quot;tiens ma pièce&quot;
 
 ! Magic : Gimmicks
 * Extractor 3.0 &gt; deck biseauté sur un coin sauf 1ère et dernière carte / entailler un coin de chacune des cartes, sauf 1ère et dernière (for cover)
-* sleeving aimanté : permet de garder une pièce aimantable après sleeving manches demi-remontées</pre>
+* sleeving aimanté : permet de garder une pièce aimantable après sleeving manches demi-remontées
+
+! Blagues / jeux de mots
+* amulette / omelette
+* les Igoto
+* un zandouille &amp; l'autre zandouille
+* les antis :
+* les antilles / les méssants
+** antillais
+** en titane
+* quand il va trop vite, est-ce qu'un schizophrène ?</pre>
 </div>
 <div created="20210609154906945" modified="20210609155257736" tags="communication fiche_lecture" title="Influence &amp; manipulation">
 <pre>* Pied dans la bouche
@@ -13935,6 +13952,41 @@ Pillars of Eternity
 * Dune II
 * HMM3
 * Starcraft I &amp; II</pre>
+</div>
+<div created="20220523123402867" modified="20220523124855285" tags="jeux" title="jeux pratiqués">
+<pre>! compétitifs
+* MtG Magic the Gathering JCC
+* GoT / TdF / Game of Thrones / Trône de Fer JCE
+* L5R / L5A / Legand of the Five Rings / Légende des Cinq Anneaux JCE
+* SWD / StarWars Destiny JCC
+* DBS / Dragon Ball Super JCC
+
+! coop
+* l'Ordre de Veiel ch.1
+* GloomHaven
+* HeroQuest
+
+! jdr
+* Vampire : la Mascarade MJ
+* Loup-Garou : l'Apocalypse MJ
+* Mage : l'Ascension MJ
+* Kindred of the East MJ
+* Elekasë MJ/PJ
+* Shadowrun PJ
+* L5A PJ
+* AD&amp;D, D&amp;D PJ
+* StarWars D6 PJ
+* INS/MV PJ
+* Chill PJ
+* Cyberpunk PJ
+* EarthDawn PJ
+* Agone PJ
+* Feng Shui PJ
+* Pendragon
+* Scales
+* NightProwler
+* Mutant Year Zero
+* Château Falkenstein</pre>
 </div>
 <div created="20190814104929247" modified="20201201130602857" tags="dev todo" title="Kotlin">
 <pre>! Overview
@@ -15263,7 +15315,7 @@ Osho « la liberté »
 * sexe
 * anus</pre>
 </div>
-<div created="20190725121652596" modified="20201201130658993" tags="pedo todo complo" title="pedo-criminalité &amp; Maçonnerie">
+<div created="20190725121652596" modified="20220523124643264" tags="todo complo pk" title="pedo-criminalité &amp; Maçonnerie">
 <pre>* No 7 : PEDO-CRIMINALITE : https://www.youtube.com/playlist?list=PLNqpj0IGr43AogFsIF7WyriYKbyddY4bH
 * affaire Epstein : https://www.youtube.com/playlist?list=PLNqpj0IGr43BnTpCMnrYatI7cmWKqLK1B
 *''Amidlisa '': http://rendeznousnosenfants.org/ftprendez/amidlisa/
@@ -15758,6 +15810,32 @@ http://liens.howtommy.net/?Be1gEQ
 
 </pre>
 </div>
+<div created="20220511172245331" modified="20220512170245048" tags="" title="prénoms">
+<pre>! androgynes
+* ''Cassandre''
+* ''Dominique''
+* Morgan
+* Claude
+* ''Alix''
+* ''Camille''
+* Charlie
+* ''Andrea''
+* ''Sasha''
+* ''Ange''
+* Eden
+* ''Céleste''
+* ''Maxence''
+* Ambre
+* Ambroise
+* ''Ariel''
+* Candide
+* Gwen
+* Sam
+* Olive
+* Olympe
+* Prudence
+* Anaël</pre>
+</div>
 <div created="20201201104155552" modified="20201201104411422" tags="exercices" title="Projection de la voix">
 <pre>Pour bien se faire entendre, il ne faut surtout pas crier, mais plutôt projeter sa voix, un peu comme on lance un caillou avec un lance-pierres. Le comédien doit donc s’exercer à parler « du ventre » et non de la gorge, c’est-à-dire que l’effort doit provenir des muscles abdominaux. Non seulement la voix aiguë qui provient de la gorge est agaçante à l’oreille, mais en plus elle ne porte pas loin et irrite rapidement les cordes vocales – certains en perdent même la voix.
 
@@ -15982,8 +16060,24 @@ la connaissance (la certitude) est une sensation
 * Est-ce la meilleure option? 
 * Qu'est-ce qu'on peut faire dès maintenant?</pre>
 </div>
-<div created="20190529145620246" modified="20220511151906484" tags="hypnomachie core" title="Quotes, citations">
+<div created="20190529145620246" modified="20220523094419920" tags="hypnomachie core" title="Quotes, citations">
 <pre>&lt;&lt;&lt;
+''Ne te hâte pas, ne t’inquiète pas, ton séjour ici ne sera pas long, alors n’oublie pas de t’arrêter pour sentir les fleurs. ''
+Walter Hagen
+
+&lt;&lt;&lt;
+
+&lt;&lt;&lt;
+Un PC sans Windows, c'est comme un gâteau sans moutarde !
+&lt;&lt;&lt;
+
+&lt;&lt;&lt;
+* wow quelle poigne ! j'espère que tu règles tes problèmes avec autant de fermeté !?
+* pas besoin de serrer si fort pour un simple bonjour :)
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
 Il n'y a que Dieu; l'homme est une illusion d'optique -- Sartre
 &lt;&lt;&lt;
 
