--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -195,6 +195,8 @@ Error message and password prompt
 
 <li>$:/state/folded/Home</li>
 
+<li>$:/state/folded/idées jeu société</li>
+
 <li>$:/state/folded/leboncoin</li>
 
 <li>$:/state/folded/online services, addons &amp; resources</li>
@@ -559,6 +561,8 @@ Error message and password prompt
 
 <li>prénoms</li>
 
+<li>préparatifs voyages</li>
+
 <li>Projection de la voix</li>
 
 <li>pseudos</li>
@@ -570,6 +574,8 @@ Error message and password prompt
 <li>questiologie - Les questions pour comprendre un sujet</li>
 
 <li>Quotes, citations</li>
+
+<li>rdv</li>
 
 <li>Regenere - jus lunettes</li>
 
@@ -10041,7 +10047,7 @@ Home
 <div created="20210313142530656" modified="20220531145638921" title="$:/state/encrypt">
 <pre></pre>
 </div>
-<div created="20220503132554857" modified="20220509071240611" title="$:/state/folded/current bookmarks">
+<div created="20220503132554857" modified="20220706102942295" title="$:/state/folded/current bookmarks">
 <pre>show</pre>
 </div>
 <div created="20220503121013597" modified="20220503121013597" title="$:/state/folded/daily routine à inclure">
@@ -10058,6 +10064,9 @@ Home
 </div>
 <div created="20220124175419175" modified="20220131132630771" title="$:/state/folded/Home">
 <pre>show</pre>
+</div>
+<div created="20220706102937557" modified="20220706102937557" title="$:/state/folded/idées jeu société">
+<pre>hide</pre>
 </div>
 <div created="20190109093959757" modified="20190109094005946" title="$:/state/folded/leboncoin">
 <pre>show</pre>
@@ -10092,8 +10101,8 @@ Home
 <div created="20190108084833171" modified="20220131141113287" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20190108104722609" modified="20220310143750319" title="$:/state/tab/moresidebar-1850697562">
-<pre>$:/core/ui/MoreSideBar/Tags</pre>
+<div created="20190108104722609" modified="20220717171727841" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/Recent</pre>
 </div>
 <div created="20190108101211875" modified="20220610153357550" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
@@ -10101,7 +10110,7 @@ Home
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20220629130822268" list="[[idées jeu société]] [[conscience - notes &amp; idées diverses]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" modified="20220629130931403" title="$:/StoryList">
+<div created="20220717171733772" list="[[Emma kid talk]] rdv [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" modified="20220717171733772" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10123,7 +10132,7 @@ Home
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -10143,7 +10152,7 @@ Home
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -10155,11 +10164,11 @@ Home
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1536&quot;
+            &quot;text&quot;: &quot;1696&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;864&quot;
+            &quot;text&quot;: &quot;954&quot;
         }
     }
 }</pre>
@@ -10170,8 +10179,8 @@ Home
 <div created="20210313142548541" modified="20220531145637269" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20220628084405915" title="$:/temp/search">
-<pre>idées</pre>
+<div created="20190114084246125" modified="20220717164119665" title="$:/temp/search">
+<pre>prénoms</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -11004,17 +11013,22 @@ He was the embodied example of living fully.  He said, “I am means.  There are
 * compassion
 * live in present : je n'ai pas besoin de FAIRE pour ETRE, mais quand je SUIS je FAIS</pre>
 </div>
-<div created="20220428145354217" modified="20220613133105991" tags="" title="cadeaux">
+<div created="20220428145354217" modified="20220717161817826" tags="" title="cadeaux">
 <pre>! Julia
 * machine à gauffre + croques monsieurs
-* cloche à micro-ondes
+* ~~cloche à micro-ondes~~
 * multiprise plan de cuisine
 * perceuse
 * pic à chignon
 * foulard
+* four chaleur tournante &amp; porte froide
+* plaques induction
+* caisses-tiroirs à roulette en plastique (sous lits)
+* housse rangement sous vide
 
 ! Perceval
 * skateboard
+* tapette à mouches
 * peluche Bambi
 * livre &quot;lire tout seul&quot; ?
 * camping-car lego
@@ -12377,7 +12391,7 @@ Un miracle est un effet fondamental simple, bien exécuté et que la science ne 
 
 racloir d'oreille / oriculi / cure-oreill https://www.boutiquezerodechet.com/salle-de-bain-zero-dechet/179-oriculi.html</pre>
 </div>
-<div created="20190412124207841" modified="20220613151244955" tags="kids" title="Emma kid talk">
+<div created="20190412124207841" modified="20220717171858941" tags="kids" title="Emma kid talk">
 <pre>* 	pop	&gt;&gt;	pomme
 * 	fafé	&gt;&gt;	café
 * 	kuk	&gt;&gt;	sucre
@@ -12405,7 +12419,7 @@ racloir d'oreille / oriculi / cure-oreill https://www.boutiquezerodechet.com/sal
 * Perfelal l'a lè yeu mermé (Perceval il a les yeux fermés)
 * Allo ze peux pas aller à l-école paque ma fille elle a mal au ventre.
 * Laluelle l'a mit le petit bazare, bazare l'a mit Emma
-
+* (6ans) Papa, Perceval il arrête pas de nous embêter moi et mes copines ! Ah bon, il fait quoi ? Il nous enlève les pouvoirs qu'on se donne pour semblant !
 </pre>
 </div>
 <div created="20190604100557828" modified="20190604100648946" tags="fiche_lecture" title="Emotion, décision, libre-arbitre - ÉLISABETH FEYTIT">
@@ -13937,7 +13951,7 @@ Heureusement, tout cela n’est pas inéluctable. Comme cette guerre se dérou
 ** en titane
 * quand il va trop vite, est-ce qu'un schizophrène ?</pre>
 </div>
-<div created="20220610153021952" modified="20220629131902910" tags="improve jeux" title="idées jeu société">
+<div created="20220610153021952" modified="20220706102928435" tags="improve jeux" title="idées jeu société">
 <pre>! jeu à plateau, positionnement (inspi : AGoT melee, jeu de quidditch de Oz)
 ! pve ET pvp (inspi : Shadowrun Crossfire, Munchkin, Horreur à Arkham &amp; autre jce coop, ...)
 * les joueurs affrontent des &quot;monstres&quot;, mais se tirent la bourre
@@ -13998,6 +14012,12 @@ Heureusement, tout cela n’est pas inéluctable. Comme cette guerre se dérou
 * des sorts peuvent ajouter/ôter des tokens d'action (~= ralentir/accélérer)
 
 ! idées en vrac
+* ~àla gloomhaven : éléments (/mana) à 3 niveaux (fort/faible/zéro, proche/loin/zéro, ...)
+* mana: 
+** fuite de mana : le mana est récupérable mais il peut y avoir des &quot;fuites&quot;
+** brûlure de mana : le mana alloué en trop sur un sort brûle son invocateur
+** drain de mana : (certaines classes) en contrecoup de l'incantation, allocation de dégâts en f° de la puissance du sort
+* ~àla Udyr: pas d'ulti, seulement des sorts &quot;mineurs&quot; un peu + forts
 * ~àla gloomhaven : chaque carte comporte 2 parties indépendantes, on peut jouer soit le haut, soit le bas
 ** ne pouvoir jouer que les parties hautes au sein du même tour ? (~àla keyforge)
 ** devoir jouer 1 haute &amp; 1 basse en même temps, par paires ?
@@ -14103,7 +14123,15 @@ Heureusement, tout cela n’est pas inéluctable. Comme cette guerre se dérou
 ** points de victoire (~àla AGoT, ~Katana)
 ** éliminer un joueur en particulier (~àla Vampire Rivals)
 ** prise d'objectifs (~àla Arathi battleground WoW, ~L5R, ~YuGiYo)
-*** objets à looter sur les &quot;monstres&quot;</pre>
+*** objets à looter sur les &quot;monstres&quot;
+
+! inspirations pouvoirs, personnages &amp; character-design
+* League of Legends
+* Gloomhaven
+* World of Warcraft
+* Wanted / Bang!
+* Complots
+* ...</pre>
 </div>
 <div created="20210609154906945" modified="20210609155257736" tags="communication fiche_lecture" title="Influence &amp; manipulation">
 <pre>* Pied dans la bouche
@@ -16152,7 +16180,7 @@ http://liens.howtommy.net/?Be1gEQ
 
 </pre>
 </div>
-<div created="20220511172245331" modified="20220512170245048" tags="" title="prénoms">
+<div created="20220511172245331" modified="20220717164530268" tags="" title="prénoms">
 <pre>! androgynes
 * ''Cassandre''
 * ''Dominique''
@@ -16176,7 +16204,74 @@ http://liens.howtommy.net/?Be1gEQ
 * Olive
 * Olympe
 * Prudence
-* Anaël</pre>
+* Anaël
+
+! brainstorm masculin S&amp;J
+* S: Lancelot
+* S: Duncan
+* J: Armand
+* J: Nathanaël
+* J: Etienne
+* S+J: Marcorèle / Marcaurèle
+* S+J: Paul
+* Camille
+* Isaac
+* Valéry
+* J: Albert
+* J: Paul-Etienne
+* J: Adélys
+* J: Alban
+* J: Adaël
+* S: Adonis
+* S: Aramis
+
+! brainstorm féminin S&amp;J
+* Emmanuelle
+* ~~Madelaine~~
+* Agathe
+* Aurore
+* Esther
+* Camille
+* Io
+* Petra / Petrouchka
+* Cassandre
+* Antigone</pre>
+</div>
+<div created="20220717161824445" modified="20220717164113305" tags="" title="préparatifs voyages">
+<pre>* brosses à dents + dentifrice
+** au départ
+** (accessible) à l'arrivée
+** au départ du retour
+* boîte à vomi
+** toujours disponible (suspendable par ex.)
+** trajet aller
+** ''trajet retour''
+* ''alèses enfants''
+* jeux enfants
+** petits/légers
+** pas dangereux Cassandre
+** solides
+** pas les perdre (pas trop de petites pièces)
+
+! critères
+* accessible train
+* proximité commerces à pied
+* proximité balades à pied
+* proximité activités
+* peu de ménage
+* sécurisé enfants
+* ''machine à laver''
+
+! sac Sam
+* 3 sous-vêtements + 1 porté le jour du départ
+* 2 t-shirts +1
+* 1 pantalon +1
+* 1 short
+* tongs ?
+* chaussures de marche
+* chaussures légères
+* chaussures d'eau ??
+</pre>
 </div>
 <div created="20201201104155552" modified="20201201104411422" tags="exercices" title="Projection de la voix">
 <pre>Pour bien se faire entendre, il ne faut surtout pas crier, mais plutôt projeter sa voix, un peu comme on lance un caillou avec un lance-pierres. Le comédien doit donc s’exercer à parler « du ventre » et non de la gorge, c’est-à-dire que l’effort doit provenir des muscles abdominaux. Non seulement la voix aiguë qui provient de la gorge est agaçante à l’oreille, mais en plus elle ne porte pas loin et irrite rapidement les cordes vocales – certains en perdent même la voix.
@@ -16187,8 +16282,9 @@ http://liens.howtommy.net/?Be1gEQ
 * Tout en respirant par le ventre, parlez sur un ton plus grave que d’habitude pour dire vos répliques. Les femmes devront s’exercer plus que les hommes, car en général leur voix est plus aiguë et ne porte pas loin. Donc, respiration « basse » et voix grave : vous projetterez votre voix au maximum.
 Faites de tels exercices régulièrement durant vos répétitions. Vous verrez : la différence sera remarquable! On vous entendra de loin… et sans micro.</pre>
 </div>
-<div created="20220609090832140" modified="20220616143927871" tags="" title="pseudos">
+<div created="20220609090832140" modified="20220717161622576" tags="" title="pseudos">
 <pre>* Leno
+* Groudaf
 * Chanii
 * Sinakaë
 * Lancelot
@@ -16196,7 +16292,17 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Øô
 * Aljernoon
 * Sac d'Os
+* e-gore
+* Galaad
+* Gnømeðemerðe
+* Kassgnøme
+
+Others
 * Degolas
+* Gloomy
+* Katagena
+* Khren
+* Grabuge
 
 ! misc
 * Hrun
@@ -16204,6 +16310,7 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Yii
 * Ecco
 * Udyr
+* Galaad
 
 ! Fallout
 * Cassidy
@@ -16218,7 +16325,7 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Dak'kon
 * Vhailor
 * Ignus
-* Deionarra
+* ''Deionarra''
 * Trias (fallen angel)
 * Zerthimon
 * Githzerai
@@ -17197,6 +17304,9 @@ Girard
 &lt;&lt;&lt;
 
 </pre>
+</div>
+<div created="20220717171640115" modified="20220717171711666" tags="" title="rdv">
+<pre>* jeudi 4 août 18h15 : médecin</pre>
 </div>
 <div created="20190301162956576" modified="20190301163042570" tags="fiche_lecture" title="Regenere - jus lunettes">
 <pre>https://www.youtube.com/watch?v=3BIuTSK6Br4betterave
