--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -10110,7 +10110,7 @@ Home
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20220717171733772" list="[[Emma kid talk]] rdv [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" modified="20220717171733772" title="$:/StoryList">
+<div created="20220718071413152" list="[[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw" modified="20220718071413152" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10132,7 +10132,7 @@ Home
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -10152,7 +10152,7 @@ Home
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -10164,11 +10164,11 @@ Home
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1696&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;954&quot;
+            &quot;text&quot;: &quot;1080&quot;
         }
     }
 }</pre>
@@ -16372,7 +16372,7 @@ Others
 * Yoshimo (BGII)
 * Sarevok</pre>
 </div>
-<div created="20190130144059269" modified="20220617140744995" tags="core" title="pw">
+<div created="20190130144059269" modified="20220718071452246" tags="core" title="pw">
 <pre>pw passw
 
 * cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -16403,6 +16403,7 @@ webmail.ausy.fr, monespace.ausy.fr =&gt; https, s.l@au.f 322 (mois doublé)
 cseausy.fr sa.le@ausyfr C521 double
 leno.1fr1.nt =&gt; A...n 2/20
 FREEBOX =&gt; 1/20
+free mobile =&gt; 12064238 6+22
 subscribe.free.fr/login =&gt; fbx18043933 521 alphanumonly / fbx27860631 bébé-terme (alphanumonly)
 youtube =&gt; osefgrr.la	5+22    cf https://www.guerrillamail.com/fr/inbox?mail_id=476361683
 =&gt; osefosef@grr.la 2/20
